--- a/vue/task2.html
+++ b/vue/task2.html
@@ -9,6 +9,12 @@
 </head>
 
 <body>
+
+    <!-- Вы разрабатываете приложение для отображения и сортировки списка товаров. 
+    У вас есть массив объектов products, где каждый объект представляет товар с его названием и ценой. 
+    Вам необходимо отобразить список товаров и предоставить
+     пользователю возможность сортировать товары по цене (по возрастанию и по убыванию). -->
+
     <div id="app">
         <h1>Список товаров</h1>
         <div>
